--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -31,7 +31,7 @@
   </appSettings>
   <system.web>
     <!-- Calls Customed Error Views -->
-    <customErrors mode="RemoteOnly" defaultRedirect="~/Error">
+    <customErrors mode="On" defaultRedirect="~/Error">
       <error redirect="~/Error/NotFound" statusCode="404"/>
       <error redirect="~/Error/InternalServer" statusCode="500"/>
       <error redirect="~/Error/BadGateway" statusCode="502"/>
