--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1506,6 +1506,7 @@
     <Content Include="Views\Error\NotFoundError.cshtml" />
     <Content Include="Views\Error\BadGatewayError.cshtml" />
     <Content Include="Views\Error\ServiceUnavailableError.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
