--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -720,6 +720,7 @@
     <Compile Include="Models\TerminalMessage.cs" />
     <Compile Include="Models\TerminalPicture.cs" />
     <Compile Include="Models\TerminalWorkingHours.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\TransactionStatistic.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\VaultCash.cs" />
